<resources>
    <string name="app_name">Login Page</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="or">OR</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">SIGN UP</string>
</resources>