<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/TextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/EditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/TextRemember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_login"
                android:textSize="20sp"
                app:cornerRadius = "10dp"/>

            <TextView
                android:id="@+id/TextForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:layout_marginTop="3dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <!-- Left side of the line -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#000000" />

                <!-- Or symbol -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:background="@drawable/black_border"
                    android:textSize="20sp"
                    android:paddingHorizontal="8dp"
                    android:textColor="#000000" />

                <!-- Right side of the line -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textAlignment="center"
                    android:text="G"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:background="@drawable/red_circle" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textAlignment="center"
                    android:text="f"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    android:textSize="30sp"
                    android:background="@drawable/purple_circle"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textAlignment="center"
                    android:text="in"
                    android:textStyle="bold"
                    android:textColor="@color/dark_blue"
                    android:textSize="30sp"
                    android:background="@drawable/dark_blue_circle"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_an_account"
                    android:textSize="16sp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>